[gd_scene load_steps=7 format=3 uid="uid://1koy10lrhgc0"]

[ext_resource type="Script" uid="uid://62yml7bon5u" path="res://#3 River Raid/Assets #3/scripts/brigde.gd" id="1_3rrnk"]
[ext_resource type="Texture2D" uid="uid://chitvx3nam8u1" path="res://#3 River Raid/Assets #3/images/bridge/Bridge.png" id="1_23klw"]
[ext_resource type="Texture2D" uid="uid://kk4fibm4xm35" path="res://#3 River Raid/Assets #3/images/bridge/brdgate.png" id="2_mswlg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpvf7"]
size = Vector2(99, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1tl1"]
size = Vector2(98, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfrou"]
size = Vector2(96, 31)

[node name="Brigde" type="Node2D"]
script = ExtResource("1_3rrnk")

[node name="Bridge1" type="Sprite2D" parent="."]
texture = ExtResource("1_23klw")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge1"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge1/StaticBody2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_mpvf7")

[node name="BridgeArea" type="Area2D" parent="Bridge1"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge1/BridgeArea"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_mpvf7")

[node name="Bridge2" type="Sprite2D" parent="."]
position = Vector2(198, 0)
texture = ExtResource("1_23klw")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge2"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge2/StaticBody2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_w1tl1")

[node name="BridgeArea2" type="Area2D" parent="Bridge2"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge2/BridgeArea2"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_w1tl1")

[node name="PassBridge" type="Sprite2D" parent="."]
position = Vector2(99, 0)
texture = ExtResource("2_mswlg")

[node name="BridgePassArea" type="Area2D" parent="PassBridge"]
collision_layer = 2
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="PassBridge/BridgePassArea"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_tfrou")

[connection signal="body_entered" from="Bridge1/BridgeArea" to="." method="_on_bridge_c_pass_area_body_entered"]
[connection signal="body_entered" from="Bridge2/BridgeArea2" to="." method="_on_bridge_c_pass_area_body_entered"]
[connection signal="area_entered" from="PassBridge/BridgePassArea" to="." method="_on_bridge_pass_area_area_entered"]
[connection signal="body_entered" from="PassBridge/BridgePassArea" to="." method="_on_bridge_pass_area_body_entered"]
